--- a/cockpit/index.html
+++ b/cockpit/index.html
@@ -35,12 +35,12 @@
         .cockpit-container {
             display: grid;
             grid-template-columns: 25% 75%;
-            grid-template-rows: 80px 70vh auto;
+            grid-template-rows: 80px 1fr;
             height: 100vh;
             gap: 15px;
             padding: 15px;
             box-sizing: border-box;
-            overflow-y: auto;
+            overflow: hidden;
         }
 
         /* Header */
@@ -123,6 +123,8 @@
             gap: 15px;
             overflow-y: auto;
             box-sizing: border-box;
+            height: 100%;
+            max-height: 100%;
         }
 
         .panel-title {
@@ -201,6 +203,9 @@
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr;
             gap: 15px;
+            height: 100%;
+            max-height: 100%;
+            overflow: hidden;
         }
 
         .dashboard-card {
@@ -272,6 +277,9 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            height: 100%;
+            max-height: 100%;
+            overflow-y: auto;
         }
 
         .control-section {
@@ -636,8 +644,8 @@
             box-shadow: 0 0 20px rgba(0, 212, 255, 0.3);
             overflow: hidden;
             flex: 2;
-            min-height: 450px;
-            max-height: 600px;
+            height: 100%;
+            max-height: 100%;
             display: flex;
             flex-direction: column;
         }
@@ -680,7 +688,8 @@
             gap: 15px;
             margin-bottom: 15px;
             min-height: 0;
-            max-height: 400px;
+            height: 100%;
+            max-height: 100%;
             overflow: hidden;
         }
 
@@ -718,7 +727,9 @@
             border-top: 1px solid rgba(46, 213, 115, 0.3);
             padding-top: 10px;
             margin-top: 10px;
-            min-height: 120px;
+            height: 120px;
+            max-height: 120px;
+            overflow: visible;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
