--- a/cockpit/index.html
+++ b/cockpit/index.html
@@ -35,7 +35,7 @@
         .cockpit-container {
             display: grid;
             grid-template-columns: 25% 75%;
-            grid-template-rows: 80px 1fr;
+            grid-template-rows: 80px 1fr 300px;
             height: 100vh;
             gap: 15px;
             padding: 15px;
@@ -631,7 +631,8 @@
             flex-direction: column;
             gap: 15px;
             height: 100%;
-            overflow-y: auto;
+            max-height: 100%;
+            overflow: hidden;
             box-sizing: border-box;
         }
 
@@ -643,9 +644,9 @@
             padding: 15px;
             box-shadow: 0 0 20px rgba(0, 212, 255, 0.3);
             overflow: hidden;
-            flex: 2;
-            height: 100%;
-            max-height: 100%;
+            flex: 1;
+            min-height: 400px;
+            max-height: 500px;
             display: flex;
             flex-direction: column;
         }
